--- a/api/package.json
+++ b/api/package.json
@@ -19,32 +19,32 @@
     "prisma:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.485.0",
+    "@aws-sdk/s3-request-presigner": "^3.485.0",
     "@nestjs/common": "^10.3.0",
-    "@nestjs/core": "^10.3.0",
     "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/throttler": "^5.1.0",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.3",
-    "@prisma/client": "^5.8.0",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "bcrypt": "^5.1.1",
-    "stripe": "^14.10.0",
-    "bullmq": "^5.1.0",
-    "ioredis": "^5.3.2",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
-    "zod": "^3.22.4",
-    "nanoid": "^3.3.7",
-    "@aws-sdk/client-s3": "^3.485.0",
-    "@aws-sdk/s3-request-presigner": "^3.485.0",
-    "@opentelemetry/sdk-node": "^0.45.0",
     "@opentelemetry/auto-instrumentations-node": "^0.40.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.45.0",
+    "@opentelemetry/sdk-node": "^0.45.0",
+    "@prisma/client": "^5.8.0",
+    "bcrypt": "^6.0.0",
+    "bullmq": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "ioredis": "^5.3.2",
+    "nanoid": "^3.3.7",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^14.10.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.2.1",
@@ -92,4 +92,3 @@
     "seed": "tsx prisma/seed.ts"
   }
 }
-
