--- a/app/package.json
+++ b/app/package.json
@@ -9,31 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.0.0",
+    "@tanstack/react-query": "^5.20.0",
+    "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.0",
+    "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@clerk/nextjs": "^5.0.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
-    "class-variance-authority": "^0.7.0",
-    "lucide-react": "^0.344.0",
     "recharts": "^2.12.0",
-    "date-fns": "^3.3.0",
-    "zod": "^3.22.4",
-    "@tanstack/react-query": "^5.20.0",
-    "axios": "^1.6.5"
+    "svix": "^1.77.0",
+    "tailwind-merge": "^2.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.3.3",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.2.0",
+    "postcss": "^8.4.33",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.17"
+    "typescript": "^5.3.3"
   }
 }
-
