--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.485.0",
     "@aws-sdk/s3-request-presigner": "^3.485.0",
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
@@ -38,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "ioredis": "^5.3.2",
+    "jwks-rsa": "^3.2.0",
     "nanoid": "^3.3.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
