--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "bullmq": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express": "^5.1.0",
     "ioredis": "^5.3.2",
     "jwks-rsa": "^3.2.0",
     "nanoid": "^3.3.7",
@@ -45,7 +46,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
-    "stripe": "^14.10.0",
+    "stripe": "^14.25.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
