--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "@aws-sdk/client-s3": "^3.485.0",
     "@aws-sdk/s3-request-presigner": "^3.485.0",
     "@clerk/clerk-sdk-node": "^5.1.6",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
@@ -33,7 +34,8 @@
     "@opentelemetry/auto-instrumentations-node": "^0.40.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.45.0",
     "@opentelemetry/sdk-node": "^0.45.0",
-    "@prisma/client": "^5.8.0",
+    "@prisma/client": "5.22.0",
+    "@types/ioredis": "^5.0.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.1.0",
     "class-transformer": "^0.5.1",
