--- a/api/package.json
+++ b/api/package.json
@@ -31,9 +31,18 @@
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/throttler": "^5.1.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.40.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.45.0",
-    "@opentelemetry/sdk-node": "^0.45.0",
+    "@opentelemetry/api": "1.7.0",
+    "@opentelemetry/auto-instrumentations-node": "0.40.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "0.45.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.54.0",
+    "@opentelemetry/exporter-trace-otlp-http": "0.45.0",
+    "@opentelemetry/instrumentation-express": "^0.43.0",
+    "@opentelemetry/instrumentation-http": "^0.54.0",
+    "@opentelemetry/instrumentation-ioredis": "^0.43.0",
+    "@opentelemetry/resources": "1.18.0",
+    "@opentelemetry/sdk-metrics": "1.18.0",
+    "@opentelemetry/sdk-node": "0.45.0",
+    "@opentelemetry/semantic-conventions": "1.18.0",
     "@prisma/client": "5.22.0",
     "@types/ioredis": "^5.0.0",
     "axios": "^1.12.2",
