--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,9 +6,9 @@ cmds = ['pnpm install --no-frozen-lockfile']
 
 [phases.build]
 cmds = [
-  'cd api && pnpm prisma generate',
-  'cd api && pnpm build',
-  'cd app && pnpm build'
+  'pnpm --filter api prisma generate',
+  'pnpm --filter api build',
+  'pnpm --filter app build'
 ]
 
 [start]
