--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,7 +6,7 @@ cmds = ['pnpm install --no-frozen-lockfile']
 
 [phases.build]
 cmds = [
-  'pnpm --filter api prisma generate',
+  'pnpm --filter api exec prisma generate',
   'pnpm --filter api build',
   'pnpm --filter app build'
 ]
