--- a/.railwayignore
+++ b/.railwayignore
@@ -1,23 +1,13 @@
-# Ignore files that might interfere with Railway deployment
-Dockerfile
-docker-compose*.yml
-.dockerignore
-
 # Ignore development files
-node_modules
-.next
-dist
-*.log
 .env.local
 .env.development
 .env.test
+node_modules
+.git
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Ignore IDE files
-.vscode
-.idea
-*.swp
-*.swo
-
-# Ignore OS files
-.DS_Store
-Thumbs.db
+# Ignore frontend files for API service
+app/
