--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,9 +6,10 @@ cmds = ['pnpm install --no-frozen-lockfile']
 
 [phases.build]
 cmds = [
+  'echo "Building API..."',
   'pnpm --filter api exec prisma generate',
   'pnpm --filter api build',
-  'pnpm --filter app build'
+  'echo "API build complete"'
 ]
 
 [start]
