Separate API and Frontend for independent builds
- Copy package.json and pnpm-lock.yaml to api/ and app/ folders
- Update api/package.json with self-contained dependencies and scripts
- Update app/package.json with Next.js dependencies and scripts
- Update Railway configurations for independent builds
- Remove monorepo dependencies from individual services
- Each service now has everything needed to build independently

This should resolve Railway build issues by eliminating monorepo complexity.

--- a/app/nixpacks.toml
+++ b/app/nixpacks.toml
@@ -2,10 +2,18 @@
 nixPkgs = ['nodejs_18', 'pnpm']
 
 [phases.install]
-cmds = ['pnpm install --no-frozen-lockfile']
+cmds = [
+  'echo "Installing frontend dependencies..."',
+  'pnpm install --no-frozen-lockfile',
+  'echo "Dependencies installed"'
+]
 
 [phases.build]
-cmds = ['pnpm --filter app build']
+cmds = [
+  'echo "Building frontend..."',
+  'pnpm build',
+  'echo "Frontend build complete"'
+]
 
 [start]
-cmd = 'pnpm --filter app start'
+cmd = 'pnpm start'
