--- a/api/package.json
+++ b/api/package.json
@@ -1,109 +1,98 @@
 {
-  "name": "@launchkit/api",
+  "name": "launchkit-api",
   "version": "0.1.0",
   "private": true,
-  "description": "LaunchKit AI - NestJS REST API",
+  "description": "LaunchKit AI API - Production-grade AI SaaS API with usage-based billing",
+  "author": "LaunchKit Team",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
-    "dev": "nest start --watch",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio",
-    "prisma:seed": "tsx prisma/seed.ts"
+    "prisma:seed": "tsx prisma/seed.ts",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.485.0",
-    "@aws-sdk/s3-request-presigner": "^3.485.0",
-    "@clerk/clerk-sdk-node": "^5.1.6",
-    "@nestjs/bullmq": "^11.0.4",
-    "@nestjs/common": "^10.3.0",
+    "@nestjs/bullmq": "^10.0.1",
+    "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.3.0",
+    "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/passport": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
-    "@nestjs/throttler": "^5.1.0",
-    "@opentelemetry/api": "1.7.0",
-    "@opentelemetry/auto-instrumentations-node": "0.40.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "0.45.0",
-    "@opentelemetry/exporter-trace-otlp-grpc": "^0.54.0",
-    "@opentelemetry/exporter-trace-otlp-http": "0.45.0",
-    "@opentelemetry/instrumentation-express": "^0.43.0",
-    "@opentelemetry/instrumentation-http": "^0.54.0",
-    "@opentelemetry/instrumentation-ioredis": "^0.43.0",
-    "@opentelemetry/resources": "1.18.0",
-    "@opentelemetry/sdk-metrics": "1.18.0",
-    "@opentelemetry/sdk-node": "0.45.0",
-    "@opentelemetry/semantic-conventions": "1.18.0",
-    "@prisma/client": "5.22.0",
-    "@types/ioredis": "^5.0.0",
-    "axios": "^1.12.2",
-    "bcrypt": "^6.0.0",
-    "bullmq": "^5.1.0",
+    "@nestjs/throttler": "^5.0.1",
+    "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.40.3",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.45.2",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.45.2",
+    "@opentelemetry/instrumentation-dns": "^0.40.3",
+    "@opentelemetry/instrumentation-express": "^0.33.2",
+    "@opentelemetry/instrumentation-http": "^0.45.2",
+    "@opentelemetry/instrumentation-ioredis": "^0.33.2",
+    "@opentelemetry/resources": "^1.18.1",
+    "@opentelemetry/sdk-metrics": "^1.18.1",
+    "@opentelemetry/sdk-node": "^0.45.2",
+    "@prisma/client": "^5.7.1",
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "bullmq": "^4.15.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "express": "^5.1.0",
+    "crypto": "^1.0.1",
+    "express": "^4.18.2",
     "ioredis": "^5.3.2",
-    "jwks-rsa": "^3.2.0",
-    "nanoid": "^3.3.7",
+    "jwks-rsa": "^3.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.1.14",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "stripe": "^14.25.0",
-    "zod": "^3.22.4"
+    "stripe": "^14.9.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.2.1",
-    "@nestjs/schematics": "^10.0.3",
-    "@nestjs/testing": "^10.3.0",
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.6",
-    "@types/passport-jwt": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "jest": "^29.7.0",
-    "prettier": "^3.1.1",
-    "prisma": "^5.8.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0",
+    "prisma": "^5.7.1",
     "source-map-support": "^0.5.21",
-    "ts-jest": "^29.1.1",
-    "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.1",
+    "tsx": "^4.6.2",
+    "typescript": "^5.1.3"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
   },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
-  }
+  "packageManager": "pnpm@8.14.0"
 }
+
