--- a/api/package.json
+++ b/api/package.json
@@ -93,6 +93,9 @@
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
   },
-  "packageManager": "pnpm@8.14.0"
+  "packageManager": "pnpm@8.14.0",
+  "pnpm": {
+    "overrides": {}
+  }
 }
 
