Fix API dependencies and build issues
- Update OpenTelemetry packages to compatible versions (0.50.0)
- Fix tsconfig-paths version to 4.2.0
- Add missing dependencies: @clerk/clerk-sdk-node and nanoid
- API now builds successfully with all dependencies resolved
- Ready for Railway deployment

All API build errors resolved!

--- a/api/package.json
+++ b/api/package.json
@@ -33,21 +33,23 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/throttler": "^5.0.1",
-    "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.40.3",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.45.2",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.45.2",
-    "@opentelemetry/instrumentation-dns": "^0.40.3",
-    "@opentelemetry/instrumentation-express": "^0.33.2",
-    "@opentelemetry/instrumentation-http": "^0.45.2",
-    "@opentelemetry/instrumentation-ioredis": "^0.33.2",
-    "@opentelemetry/resources": "^1.18.1",
-    "@opentelemetry/sdk-metrics": "^1.18.1",
-    "@opentelemetry/sdk-node": "^0.45.2",
+    "@opentelemetry/api": "^1.8.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.50.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.50.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.50.0",
+    "@opentelemetry/instrumentation-dns": "^0.50.0",
+    "@opentelemetry/instrumentation-express": "^0.50.0",
+    "@opentelemetry/instrumentation-http": "^0.50.0",
+    "@opentelemetry/instrumentation-ioredis": "^0.50.0",
+    "@opentelemetry/resources": "^1.25.0",
+    "@opentelemetry/sdk-metrics": "^1.25.0",
+    "@opentelemetry/sdk-node": "^0.50.0",
     "@prisma/client": "^5.7.1",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "bullmq": "^4.15.4",
+    "@clerk/clerk-sdk-node": "^5.1.6",
+    "nanoid": "^5.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
@@ -85,7 +87,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.1",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.6.2",
     "typescript": "^5.1.3"
   },
