feat: Add Railway deployment configuration
- Update railway.json with correct health check endpoint
- Update nixpacks.toml with deployment phases and migrations
- Add Railway deployment script (railway-deploy.sh)
- Add Railway environment variables template
- Add comprehensive Railway deployment documentation
- Update package.json with Railway-specific scripts

Ready for Railway deployment with automated migrations and health checks.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "db:studio": "cd api && pnpm prisma studio",
     "stripe:setup": "cd scripts && tsx stripe-setup.ts",
     "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down"
+    "docker:down": "docker-compose down",
+    "railway:deploy": "./railway-deploy.sh",
+    "railway:migrate": "cd api && pnpm prisma migrate deploy",
+    "railway:seed": "cd api && pnpm prisma db seed",
+    "postinstall": "cd api && pnpm prisma generate"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
