--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,9 +7,13 @@ cmds = ['pnpm install --no-frozen-lockfile']
 [phases.build]
 cmds = [
   'pnpm --filter api exec prisma generate',
-  'pnpm --filter api build',
-  'pnpm --filter app build'
+  'pnpm --filter api build'
+]
+
+[phases.deploy]
+cmds = [
+  'cd api && pnpm prisma migrate deploy'
 ]
 
 [start]
-cmd = 'cd api && node dist/main.js'
+cmd = 'cd api && PORT=$PORT node dist/main.js'
