feat: Configure monorepo for Railway auto-detection
- Simplified root railway.json and nixpacks.toml for monorepo detection
- Added service-specific configurations:
  - /api/railway.json and /api/nixpacks.toml for NestJS API
  - /app/railway.json and /app/nixpacks.toml for Next.js frontend
- Updated RAILWAY_DEPLOYMENT.md with monorepo instructions
- Added MONOREPO_DEPLOYMENT.md with detailed monorepo setup guide
- Railway will now automatically detect and separate API and frontend services
- Each service has its own build and deployment configuration

--- a/app/nixpacks.toml
+++ b/app/nixpacks.toml
@@ -2,18 +2,10 @@
 nixPkgs = ['nodejs_18', 'pnpm']
 
 [phases.install]
-cmds = [
-  'echo "Installing frontend dependencies..."',
-  'pnpm install --no-frozen-lockfile',
-  'echo "Dependencies installed"'
-]
+cmds = ['pnpm install --no-frozen-lockfile']
 
 [phases.build]
-cmds = [
-  'echo "Building frontend..."',
-  'pnpm build',
-  'echo "Frontend build complete"'
-]
+cmds = ['pnpm build']
 
 [start]
 cmd = 'pnpm start'
