fix: Resolve Railway build issues
- Create pnpm-workspace.yaml file (pnpm requires this instead of workspaces in package.json)
- Remove workspaces field from root package.json
- Remove postinstall scripts that were causing build failures
- Fix API package.json postinstall script that was trying to run prisma generate before installation
- Prisma generation now handled properly in nixpacks.toml build phase
- This should resolve the EACCES and build failures on Railway

--- a/api/nixpacks.toml
+++ b/api/nixpacks.toml
@@ -2,7 +2,9 @@
 nixPkgs = ['nodejs_18', 'pnpm']
 
 [phases.install]
-cmds = ['pnpm install --no-frozen-lockfile']
+cmds = [
+  'pnpm install --no-frozen-lockfile'
+]
 
 [phases.build]
 cmds = [
