--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,3 +3,9 @@ nixPkgs = ['nodejs_18', 'pnpm']
 
 [phases.install]
 cmds = ['pnpm install --no-frozen-lockfile']
+
+[phases.build]
+cmds = ['pnpm build']
+
+[start]
+cmd = 'pnpm dev'
