--- a/.railwayignore
+++ b/.railwayignore
@@ -1,13 +1,5 @@
-# Ignore development files
-.env.local
-.env.development
-.env.test
-node_modules
-.git
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Ignore frontend files for API service
-app/
+# Ignore root-level build files to prevent workspace conflicts
+railway.json
+nixpacks.toml
+package.json
+turbo.json
