--- a/api/railway.toml
+++ b/api/railway.toml
@@ -1,10 +1,8 @@
 [build]
-builder = "nixpacks"
+builder = "dockerfile"
+dockerfilePath = "api/Dockerfile"
 
 [deploy]
 startCommand = "PORT=$PORT node dist/main.js"
 healthcheckPath = "/v1/health"
 healthcheckTimeout = 100
-
-[build.nixpacks]
-nixpkgs = ["nodejs_18", "pnpm"]
