--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,24 +6,18 @@ RUN npm install -g pnpm
 # Set working directory
 WORKDIR /app
 
-# Copy package files
-COPY package.json pnpm-lock.yaml ./
-COPY api/package.json ./api/
+# Copy all files (Railway builds from root)
+COPY . .
 
 # Install dependencies
 RUN pnpm install --no-frozen-lockfile
 
-# Copy source code
-COPY api/ ./api/
-
-# Generate Prisma client
+# Generate Prisma client and build
 WORKDIR /app/api
 RUN pnpm prisma generate
-
-# Build the application
 RUN pnpm run build
 
-# Copy built files to root
+# Copy built files to root for Railway
 WORKDIR /app
 RUN cp -r api/dist ./dist
 
