--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,18 +6,22 @@ RUN npm install -g pnpm
 # Set working directory
 WORKDIR /app
 
-# Copy all files (Railway builds from root)
-COPY . .
+# Copy package files first (for better caching)
+COPY package.json pnpm-lock.yaml ./
+COPY api/package.json ./api/
 
 # Install dependencies
 RUN pnpm install --no-frozen-lockfile
+
+# Copy source code
+COPY api/ ./api/
 
 # Generate Prisma client and build
 WORKDIR /app/api
 RUN pnpm prisma generate
 RUN pnpm run build
 
-# Copy built files to root for Railway
+# Copy built files to root
 WORKDIR /app
 RUN cp -r api/dist ./dist
 
