--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,15 +6,11 @@ RUN npm install -g pnpm
 # Set working directory
 WORKDIR /app
 
-# Copy package files first (for better caching)
-COPY package.json pnpm-lock.yaml ./
-COPY api/package.json ./api/
+# Copy all files (Railway builds from root)
+COPY . .
 
 # Install dependencies
 RUN pnpm install --no-frozen-lockfile
-
-# Copy source code
-COPY api/ ./api/
 
 # Generate Prisma client and build
 WORKDIR /app/api
