--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -18,7 +18,9 @@ RUN pnpm install --no-frozen-lockfile
 # Generate Prisma client and build
 WORKDIR /app/api
 RUN echo "Generating Prisma client..." && pnpm prisma generate
-RUN echo "Building application with TypeScript..." && echo "Current directory: $(pwd)" && echo "TypeScript config exists:" && ls -la tsconfig.json && (npx tsc --verbose || echo "TypeScript compilation failed, checking for errors...")
+RUN echo "Listing all files in current directory..." && ls -la
+RUN echo "Looking for tsconfig.json..." && find . -name "tsconfig.json"
+RUN echo "Building application with TypeScript..." && echo "Current directory: $(pwd)" && (npx tsc --verbose || echo "TypeScript compilation failed, checking for errors...")
 RUN echo "Checking if dist was created..." && ls -la dist/ 2>/dev/null || echo "No dist directory found"
 RUN echo "Build completed, listing current directory:" && ls -la
 RUN echo "Looking for any compiled files..." && find . -name "*.js" -type f
