--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -20,6 +20,8 @@ WORKDIR /app/api
 RUN echo "Generating Prisma client..." && pnpm prisma generate
 RUN echo "Listing all files in current directory..." && ls -la
 RUN echo "Looking for tsconfig.json..." && find . -name "tsconfig.json"
+RUN echo "Copying tsconfig.json from root..." && cp /app/tsconfig.json ./tsconfig.json
+RUN echo "Verifying tsconfig.json exists..." && ls -la tsconfig.json
 RUN echo "Building application with TypeScript..." && echo "Current directory: $(pwd)" && (npx tsc --verbose || echo "TypeScript compilation failed, checking for errors...")
 RUN echo "Checking if dist was created..." && ls -la dist/ 2>/dev/null || echo "No dist directory found"
 RUN echo "Build completed, listing current directory:" && ls -la
