Fix Railway deployment: Copy dist to root, fix file paths, force Dockerfile builder

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -17,8 +17,15 @@ WORKDIR /app/api
 RUN pnpm prisma generate
 RUN pnpm build
 
+# Copy built files to root for Railway
+WORKDIR /app
+RUN cp -r api/dist ./dist
+
+# Verify build output
+RUN echo "Build completed, checking dist directory:" && ls -la dist/ && echo "Main file exists:" && ls -la dist/main.js
+
 # Expose port
 EXPOSE 3001
 
 # Start the application
-CMD ["node", "dist/main"]
+CMD ["node", "dist/main.js"]
