Fix port mismatch: Configure Railway to use port 8080 to match actual PORT env var

--- a/api/railway.toml
+++ b/api/railway.toml
@@ -6,3 +6,6 @@ dockerfilePath = "api/Dockerfile"
 startCommand = "node dist/main.js"
 healthcheckPath = "/v1/health/simple"
 healthcheckTimeout = 30
+
+[networking]
+port = 8080
