--- a/api/railway.toml
+++ b/api/railway.toml
@@ -4,8 +4,8 @@ dockerfilePath = "api/Dockerfile"
 
 [deploy]
 startCommand = "node dist/main.js"
-healthcheckPath = "/v1/health/simple"
-healthcheckTimeout = 30
+healthcheckPath = "/v1/ping"
+healthcheckTimeout = 60
 
 [networking]
 port = 3001
