Fix frontend start command: Use Next.js standalone server.js instead of pnpm start

--- a/app/nixpacks.toml
+++ b/app/nixpacks.toml
@@ -11,4 +11,4 @@ cmds = ['pnpm install --frozen-lockfile']
 cmds = ['pnpm build']
 
 [start]
-cmd = 'pnpm start'
+cmd = 'node .next/standalone/server.js'
