--- a/app/railway.toml
+++ b/app/railway.toml
@@ -2,7 +2,7 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "pnpm start"
+startCommand = "cd app && pnpm start"
 healthcheckPath = "/"
 healthcheckTimeout = 60
 
