Fix database setup: Use prisma db push instead of migrate deploy to create tables from schema

--- a/api/nixpacks.toml
+++ b/api/nixpacks.toml
@@ -14,4 +14,4 @@ cmds = [
 ]
 
 [start]
-cmd = 'pnpm prisma migrate deploy && node dist/main.js'
+cmd = 'cd api && pnpm prisma db push && node dist/main.js'
