Fix start command: Remove cd command and use --schema flag for prisma db push

--- a/api/nixpacks.toml
+++ b/api/nixpacks.toml
@@ -14,4 +14,4 @@ cmds = [
 ]
 
 [start]
-cmd = 'cd api && pnpm prisma db push && node dist/main.js'
+cmd = 'pnpm prisma db push --schema=api/prisma/schema.prisma && node dist/main.js'
