--- a/api/railway.toml
+++ b/api/railway.toml
@@ -3,7 +3,7 @@ builder = "dockerfile"
 dockerfilePath = "api/Dockerfile"
 
 [deploy]
-startCommand = "pnpm prisma db push --schema=api/prisma/schema.prisma && node dist/main.js"
+startCommand = "pnpm prisma db push --schema=prisma/schema.prisma && node dist/main.js"
 healthcheckPath = "/v1/ping"
 healthcheckTimeout = 60
 
